--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,10 @@ server.ssl.key-store=classpath:keystore/keyStore.p12
 # The password used to generate the certificate
 server.ssl.key-store-password=123456
 # Trust store that holds SSL certificates.
-server.ssl.trust-store=classpath:keystore/trustStore.jks
+server.ssl.trust-store=classpath:keystore/trustStore.p12
 # Password used to access the trust store.
 server.ssl.trust-store-password=123456
 # Type of the trust store.
-server.ssl.trust-store-type=JKS
+server.ssl.trust-store-type=PKCS12
 # Whether client authentication is wanted ("want") or needed ("need").
-server.ssl.client-auth=need
+server.ssl.client-auth=want
