--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=443
+server.port=8443
 server.servlet.context-path=/
 # The format used for the keystore
 server.ssl.key-store-type=PKCS12
@@ -13,4 +13,4 @@ server.ssl.trust-store-password=123456
 # Type of the trust store.
 server.ssl.trust-store-type=PKCS12
 # Whether client authentication is wanted ("want") or needed ("need").
-server.ssl.client-auth=want
+server.ssl.client-auth=need
