--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=443
+server.port=8443
 server.servlet.context-path=/
 # The format used for the keystore
 server.ssl.key-store-type=PKCS12
@@ -14,3 +14,5 @@ server.ssl.trust-store-password=123456
 server.ssl.trust-store-type=PKCS12
 # Whether client authentication is wanted ("want") or needed ("need").
 server.ssl.client-auth=need
+# keycloak
+spring.security.oauth2.resourceserver.jwt.jwk-set-url=http://10.39.101.186:8080/realms/quickstart/protocol/openid-connect/certs
