--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,4 @@ server.ssl.trust-store-type=PKCS12
 # Whether client authentication is wanted ("want") or needed ("need").
 server.ssl.client-auth=need
 # keycloak
-spring.security.oauth2.resourceserver.jwt.jwk-set-url=http://10.39.101.186:8080/realms/quickstart/protocol/openid-connect/certs
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://10.39.101.186:8080/realms/quickstart/protocol/openid-connect/certs
